# remote-hub

./: .gitignore  create_config.sh  install.sh  pyproject.toml  routes.py  routes.yaml  routes_example.yaml  transfer_file.py
transfer_file/: __init__.py  ssh_to_server.py  transfer.py
transfer_file/data_files/: routes.yaml
